fix navigation mobile

--- a/src/widgets/navigation/navigation.module.scss
+++ b/src/widgets/navigation/navigation.module.scss
@@ -21,7 +21,7 @@
         align-items: center;
         gap: 12px;
 
-        padding: 10px 0 10px 10px;
+        padding: 10px;
 
         cursor: pointer;
 
@@ -54,7 +54,7 @@
         align-items: center;
         gap: 12px;
 
-        padding: 10px 0 10px 10px;
+        padding: 10px;
     }
 
     &-item__active > svg > path{
@@ -72,23 +72,27 @@
 
 @media (max-width: 600px) {
     .nav{
-        position: sticky;
-        top: 0;
+        position: fixed;
+        bottom: 0;
         left: 0;
-
-        justify-content: center;
-        flex-direction: row;
-        align-items: end;
         flex: 0 0 auto;
 
         border-top: 1px solid var(--main-border-color);
         background-color: var(--main-bg-color);
 
-        padding: 10px;
+        padding: 0;
         margin: 0 auto;
         max-width: 100%;
 
         cursor: pointer;
+
+        &-list{
+            display: flex;
+            justify-content: space-around;
+            flex-direction: row;
+
+            padding: 10px 0;
+        }
 
         &-item{
             display: flex;
